# Programming

./: .gitmodules  ESP32-OCPP-CONSOLE.code-workspace  ESP32-OCPP.code-workspace  Need to refresh.txt  qr_filename  xsarj_ocpp-workspace.code-workspace
C++/: CMakeLists.txt  main.cpp
C++/Visual Studio Directory/dll_test/: dll_test.sln  dll_test.vcxproj
C++/Visual Studio Directory/libtins_dll_test/libtins_dll_test/: libtins_dll_test.sln  libtins_dll_test.vcxproj  main.cpp
C++/Visual Studio Directory/libtins_dll_test/libtins_dll_test/Debug/: libtins_dll_test.exe.recipe  libtins_dll_test.ilk  libtins_dll_test.vcxproj.FileListAbsolute.txt  vc143.idb
C++/Visual Studio Directory/libtins_dll_test/libtins_dll_test/lib/: tins.exp  tins.lib
C++/Visual Studio Directory/networkscanLib/: cpp.hint  networkscanLib.cpp  networkscanLib.h  networkscanLib.sln  networkscanLib.vcxproj  networkscanLib.vcxproj.filters
C++/Visual Studio Directory/networkscanLib/Debug/: networkscanLib.dll.recipe  networkscanLib.exp  networkscanLib.ilk  networkscanLib.lib  networkscanLib.vcxproj.FileListAbsolute.txt  vc143.idb
C++/Visual Studio Directory/networkscanLib/Debug/networkscanLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  networkscanLib.lastbuildstate
C++/Visual Studio Directory/networkscanLib/x64/Debug/: networkscanLib.dll.recipe  networkscanLib.exp  networkscanLib.ilk  networkscanLib.lib  vc143.idb  (+1 more)
C++/source/: CMakeLists.txt  T.txt  dllexportpy.cpp  libtins.cpp  temper.txt
Documents/: Git.txt  (+2 more)
(+590 files in other folders)
